@@ -27,6 +27,7 @@ package com.oracle.svm.hosted;
 
 import static com.oracle.svm.core.jdk.Resources.RESOURCES_INTERNAL_PATH_SEPARATOR;
 
+import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -37,7 +38,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
@@ -47,7 +47,6 @@ import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.LongAdder;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.graalvm.compiler.api.replacements.SnippetReflectionProvider;
 import org.graalvm.compiler.debug.DebugContext;
@@ -66,6 +65,7 @@ import org.graalvm.nativeimage.impl.RuntimeResourceSupport;
 
 import com.oracle.svm.core.ClassLoaderSupport;
 import com.oracle.svm.core.ClassLoaderSupport.ResourceCollector;
+import com.oracle.svm.core.MissingRegistrationUtils;
 import com.oracle.svm.core.ParsingReason;
 import com.oracle.svm.core.SubstrateUtil;
 import com.oracle.svm.core.configure.ConfigurationFile;
@@ -86,6 +86,7 @@ import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.hosted.FeatureImpl.DuringAnalysisAccessImpl;
 import com.oracle.svm.hosted.config.ConfigurationParserUtils;
 import com.oracle.svm.hosted.jdk.localization.LocalizationFeature;
+import com.oracle.svm.util.LogUtils;
 import com.oracle.svm.util.ReflectionUtil;
 
 import jdk.vm.ci.meta.ResolvedJavaMethod;
@@ -137,8 +138,6 @@ public final class ResourcesFeature implements InternalFeature {
     private int loadedConfigurations;
     private ImageClassLoader imageClassLoader;
 
-    public final Set<Module> includedResourcesModules = new HashSet<>();
-
     private class ResourcesRegistryImpl extends ConditionalConfigurationRegistry implements ResourcesRegistry {
         private final ConfigurationTypeResolver configurationTypeResolver;
 
@@ -159,7 +158,7 @@ public final class ResourcesFeature implements InternalFeature {
 
         @Override
         public void injectResource(Module module, String resourcePath, byte[] resourceContent) {
-            Resources.registerResource(module, resourcePath, resourceContent);
+            Resources.singleton().registerResource(module, resourcePath, resourceContent);
         }
 
         @Override
@@ -228,7 +227,6 @@ public final class ResourcesFeature implements InternalFeature {
         private final DebugContext debugContext;
         private final ResourcePattern[] includePatterns;
         private final ResourcePattern[] excludePatterns;
-        private final Set<Module> includedResourcesModules;
 
         private static final int WATCHDOG_RESET_AFTER_EVERY_N_RESOURCES = 1000;
         private static final int WATCHDOG_INITIAL_WARNING_AFTER_N_SECONDS = 60;
@@ -239,12 +237,10 @@ public final class ResourcesFeature implements InternalFeature {
         private volatile String currentlyProcessedEntry;
         ScheduledExecutorService scheduledExecutor;
 
-        private ResourceCollectorImpl(DebugContext debugContext, ResourcePattern[] includePatterns, ResourcePattern[] excludePatterns, Set<Module> includedResourcesModules,
-                        Runnable heartbeatCallback) {
+        private ResourceCollectorImpl(DebugContext debugContext, ResourcePattern[] includePatterns, ResourcePattern[] excludePatterns, Runnable heartbeatCallback) {
             this.debugContext = debugContext;
             this.includePatterns = includePatterns;
             this.excludePatterns = excludePatterns;
-            this.includedResourcesModules = includedResourcesModules;
 
             this.heartbeatCallback = heartbeatCallback;
             this.reachedResourceEntries = new LongAdder();
@@ -257,7 +253,7 @@ public final class ResourcesFeature implements InternalFeature {
             scheduledExecutor.scheduleAtFixedRate(() -> {
                 if (initialReport) {
                     initialReport = false;
-                    System.out.println("WARNING: Resource scanning is taking a long time. " +
+                    LogUtils.warning("Resource scanning is taking a long time. " +
                                     "This can be caused by class-path or module-path entries that point to large directory structures. " +
                                     "Please make sure class-/module-path entries are easily accessible to native-image");
                 }
@@ -307,20 +303,22 @@ public final class ResourcesFeature implements InternalFeature {
 
         @Override
         public void addResource(Module module, String resourceName, InputStream resourceStream, boolean fromJar) {
-            collectModule(module);
             registerResource(debugContext, module, resourceName, resourceStream, fromJar);
         }
 
         @Override
         public void addDirectoryResource(Module module, String dir, String content, boolean fromJar) {
-            collectModule(module);
             registerDirectoryResource(debugContext, module, dir, content, fromJar);
         }
 
-        private void collectModule(Module module) {
-            if (module != null && module.isNamed()) {
-                includedResourcesModules.add(module);
-            }
+        @Override
+        public void registerIOException(Module module, String resourceName, IOException e, boolean linkAtBuildTime) {
+            Resources.singleton().registerIOException(module, resourceName, e, linkAtBuildTime);
+        }
+
+        @Override
+        public void registerNegativeQuery(Module module, String resourceName) {
+            Resources.singleton().registerNegativeQuery(module, resourceName);
         }
     }
 
@@ -335,9 +333,14 @@ public final class ResourcesFeature implements InternalFeature {
 
         DuringAnalysisAccessImpl duringAnalysisAccess = ((DuringAnalysisAccessImpl) access);
         ResourcePattern[] includePatterns = compilePatterns(resourcePatternWorkSet);
+        if (MissingRegistrationUtils.throwMissingRegistrationErrors()) {
+            for (ResourcePattern resourcePattern : includePatterns) {
+                Resources.singleton().registerIncludePattern(resourcePattern.moduleName, resourcePattern.pattern.pattern());
+            }
+        }
         ResourcePattern[] excludePatterns = compilePatterns(excludedResourcePatterns);
         DebugContext debugContext = duringAnalysisAccess.getDebugContext();
-        ResourceCollectorImpl collector = new ResourceCollectorImpl(debugContext, includePatterns, excludePatterns, includedResourcesModules, duringAnalysisAccess.bb.getHeartbeatCallback());
+        ResourceCollectorImpl collector = new ResourceCollectorImpl(debugContext, includePatterns, excludePatterns, duringAnalysisAccess.bb.getHeartbeatCallback());
         try {
             collector.prepareProgressReporter();
             ImageSingletons.lookup(ClassLoaderSupport.class).collectResources(collector);
@@ -351,7 +354,7 @@ public final class ResourcesFeature implements InternalFeature {
         return patterns.stream()
                         .filter(s -> s.length() > 0)
                         .map(this::makeResourcePattern)
-                        .collect(Collectors.toList())
+                        .toList()
                         .toArray(new ResourcePattern[]{});
     }
 
@@ -361,12 +364,7 @@ public final class ResourcesFeature implements InternalFeature {
             return new ResourcePattern(null, Pattern.compile(moduleNameWithPattern[0]));
         } else {
             String moduleName = moduleNameWithPattern[0];
-            boolean acceptModuleName = MODULE_NAME_ALL_UNNAMED.equals(moduleName) ? true : imageClassLoader.findModule(moduleName).isPresent();
-            if (acceptModuleName) {
-                return new ResourcePattern(moduleName, Pattern.compile(moduleNameWithPattern[1]));
-            } else {
-                throw UserError.abort("Resource pattern \"" + rawPattern + "\"s specifies unknown module " + moduleName);
-            }
+            return new ResourcePattern(moduleName, Pattern.compile(moduleNameWithPattern[1]));
         }
     }
 
@@ -413,7 +411,7 @@ public final class ResourcesFeature implements InternalFeature {
         try (DebugContext.Scope s = debugContext.scope("registerResource")) {
             String moduleNamePrefix = module == null ? "" : module.getName() + ":";
             debugContext.log(DebugContext.VERBOSE_LEVEL, "ResourcesFeature: registerResource: %s%s", moduleNamePrefix, resourceName);
-            Resources.registerResource(module, resourceName, resourceStream, fromJar);
+            Resources.singleton().registerResource(module, resourceName, resourceStream, fromJar);
         }
     }
 
@@ -422,12 +420,16 @@ public final class ResourcesFeature implements InternalFeature {
         try (DebugContext.Scope s = debugContext.scope("registerResource")) {
             String moduleNamePrefix = module == null ? "" : module.getName() + ":";
             debugContext.log(DebugContext.VERBOSE_LEVEL, "ResourcesFeature: registerResource: %s%s", moduleNamePrefix, dir);
-            Resources.registerDirectoryResource(module, dir, content, fromJar);
+            Resources.singleton().registerDirectoryResource(module, dir, content, fromJar);
         }
     }
 
     @Override
     public void registerInvocationPlugins(Providers providers, SnippetReflectionProvider snippetReflection, GraphBuilderConfiguration.Plugins plugins, ParsingReason reason) {
+        if (!reason.duringAnalysis() || reason == ParsingReason.JITCompilation) {
+            return;
+        }
+
         Method[] resourceMethods = {
                         ReflectionUtil.lookupMethod(Class.class, "getResource", String.class),
                         ReflectionUtil.lookupMethod(Class.class, "getResourceAsStream", String.class)
@@ -435,11 +437,11 @@ public final class ResourcesFeature implements InternalFeature {
         Method resolveResourceName = ReflectionUtil.lookupMethod(Class.class, "resolveName", String.class);
 
         for (Method method : resourceMethods) {
-            registerResourceRegistrationPlugin(plugins.getInvocationPlugins(), method, snippetReflection, resolveResourceName);
+            registerResourceRegistrationPlugin(plugins.getInvocationPlugins(), method, snippetReflection, resolveResourceName, reason);
         }
     }
 
-    private void registerResourceRegistrationPlugin(InvocationPlugins plugins, Method method, SnippetReflectionProvider snippetReflectionProvider, Method resolveResourceName) {
+    private void registerResourceRegistrationPlugin(InvocationPlugins plugins, Method method, SnippetReflectionProvider snippetReflectionProvider, Method resolveResourceName, ParsingReason reason) {
         List<Class<?>> parameterTypes = new ArrayList<>();
         assert !Modifier.isStatic(method.getModifiers());
         parameterTypes.add(InvocationPlugin.Receiver.class);
@@ -458,7 +460,7 @@ public final class ResourcesFeature implements InternalFeature {
                         Class<?> clazz = snippetReflectionProvider.asObject(Class.class, receiver.get().asJavaConstant());
                         String resource = snippetReflectionProvider.asObject(String.class, arg.asJavaConstant());
                         String resourceName = (String) resolveResourceName.invoke(clazz, resource);
-                        b.add(new ReachabilityRegistrationNode(() -> RuntimeResourceAccess.addResource(clazz.getModule(), resourceName)));
+                        b.add(ReachabilityRegistrationNode.create(() -> RuntimeResourceAccess.addResource(clazz.getModule(), resourceName), reason));
                         return true;
                     }
                 } catch (IllegalAccessException | InvocationTargetException e) {
